Reorganización de archivos JS y unificación de datos y lógica

--- a/app1-personas/index.html
+++ b/app1-personas/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Gestión de Personas</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App 1 - Personas</title>
+    <link rel="stylesheet" href="estilo.css"> <!-- Ruta a estilo.css -->
 </head>
 <body>
-  <h1>Personas</h1>
-
-  <form id="personaForm">
-    <input type="text" id="nombre" placeholder="Nombre" required />
-    <input type="text" id="apellido" placeholder="Apellido" required />
-    <input type="number" id="edad" placeholder="Edad" required />
-    <button type="submit">Guardar</button>
-  </form>
-
-  <ul id="listaPersonas"></ul>
-
-  <script src="js/datos.js"></script>
-  <script src="js/negocio.js"></script>
+    <h1>Gestión de Personas</h1>
+    <form>
+        <!-- Formulario de alta, baja y modificación -->
+    </form>
+    <script src="js/datos.js"></script>
+<script src="js/negocio.js"></script>
 </body>
 </html>
