--- a/app2-productos/index.html
+++ b/app2-productos/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Gestión de Productos</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App 2 - Productos</title>
+    <link rel="stylesheet" href="estilo.css"> <!-- Ruta a estilo.css -->
 </head>
 <body>
-  <h1>Productos</h1>
-
-  <form id="productoForm">
-    <input type="text" id="nombre" placeholder="Nombre del producto" required />
-    <input type="text" id="descripcion" placeholder="Descripción" required />
-    <input type="number" id="precio" placeholder="Precio" required />
-    <button type="submit">Guardar</button>
-  </form>
-
-  <ul id="listaProductos"></ul>
-
-  <script src="js/datos.js"></script>
-  <script src="js/negocio.js"></script>
+    <h1>Gestión de Productos</h1>
+    <form>
+        <!-- Formulario para gestionar productos -->
+    </form>
+    <script src="js/datos.js"></script>
+<script src="js/negocio.js"></script>
 </body>
 </html>
